@@ -8,6 +8,7 @@ v3.4.2 to
   - (fix) Callbacks 140..142 are for stations.
   - Action 7/9 variable 9A.
   - Version 2.5 beta 9.
+- Add $HOMEDRIVE$HOMEPATH to the list of search paths for .renum/
 
 v3.4.1 to v3.4.2 (r1057)
 - Data file updates:
